--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mind_on_history_book",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://danmitroshin.github.io/MindON_history",
+  "homepage": "https://danmitroshin.github.io/history_book",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
